--- a/css/profile.css
+++ b/css/profile.css
@@ -1,3 +1,66 @@
 .top-header-transparent {
   background-color: transparent;
 }
+
+.profile-header {
+  height: 80vh;
+  width: 100%;
+  background-image: url("http://papers.co/wallpaper/papers.co-vk55-android-lollipop-material-design-pattern-40-wallpaper.jpg");
+  background-position: center center;
+  background-size: 100%;
+  position: relative;
+  top: -60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.profile-header-container {
+  text-align: center;
+  position: relative;
+  bottom: -60px;
+}
+.profile-header-container img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+.profile-container {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.profile-container input {
+  padding: 5px;
+  margin-bottom: 20px;
+}
+
+.profile-actions {
+  display: flex;
+}
+
+.profile-action {
+  margin-right: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.profile-action-circle {
+  background-color: #f2f2f2;
+  padding: 15px;
+  border-radius: 50%;
+  color: #523737;
+  margin-bottom: 15px;
+}
+
+.profile-action-title {
+  font-size: 12px;
+  font-weight: 600;
+}
